# VODIN

./: .gitignore  LICENSE  README.md  client.yml  master.yml  pyproject.toml  requirements.txt
release/templates/: client.template.yml  master.template.yml
scripts/: build_release.py
src/vodin/: autostart.py  cli.py  client.py  client_entry.py  config.py  crypto.py  master.py  master_entry.py  network.py  storage.py
tests/: test_autostart.py  test_client.py  test_crypto.py  test_lease_exp.py  test_master.py  test_network.py  test_storage.py
