[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VODIN"
version = "0.1.0"
description = "Veyon over dynamic IP network"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "httpx>=0.27.0",
  "psutil>=5.9.0",
  "cryptography>=42.0.0",
  "pyyaml>=6.0.1"
]

[project.scripts]
vodin = "vodin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
